<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="TODO"
            android:src="@drawable/vec"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_film_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:fontFamily="@font/nunito_regular"
            android:includeFontPadding="false"
            android:maxLines="2"
            android:text="@string/Title"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="12dp"
            app:layout_constraintLeft_toRightOf="@+id/iv_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtVidSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"

            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_regular"
            android:includeFontPadding="false"
            android:text="@string/SizeUnknown"
            android:textSize="@dimen/_9sdp"
            app:layout_constraintLeft_toRightOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_film_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/txtVidSize">

            <TextView
                android:id="@+id/btnPreview"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@drawable/selected_back"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:text="@string/Preview"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp" />


            <TextView
                android:id="@+id/btnDownload"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="right"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@drawable/selected_back"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:text="@string/Download"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>