<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <RelativeLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/drawer"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_4sdp"
            android:foregroundGravity="center"
            android:src="@drawable/back1" />

        <RelativeLayout
            android:id="@+id/openapp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginRight="40dp"
            android:layout_toRightOf="@id/drawer">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:fontFamily="@font/pprr"
                android:gravity="center"
                android:text="Download"
                android:textColor="#353943"
                android:textSize="@dimen/_14sdp" />
        </RelativeLayout>


    </RelativeLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:visibility="gone"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/Downloads"
        app:titleTextColor="@color/black" />

    <RelativeLayout
        android:layout_below="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/lin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:elevation="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/wass_montserrat_mediummm"
                    android:gravity="center"
                    android:background="@drawable/orange_rects"
                    android:layout_margin="3dp"
                    android:text="Videos"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:visibility="gone"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/app_indicator"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:fontFamily="@font/wass_montserrat_mediummm"
                    android:gravity="center"
                    android:layout_margin="3dp"
                    android:background="@drawable/plan_rect"
                    android:text="@string/Audios"
                    android:textColor="#3C3C3C"
                    android:textSize="15sp" />

                <View
                    android:visibility="gone"
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/app_indicator"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:fontFamily="@font/wass_montserrat_mediummm"
                    android:gravity="center"
                    android:layout_margin="3dp"
                    android:text="@string/Images"
                    android:background="@drawable/plan_rect"
                    android:textColor="#3C3C3C"
                    android:textSize="15sp" />

                <View
                    android:visibility="gone"
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/app_indicator"
                     />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:visibility="gone"
            app:tabIndicatorColor="@color/white"
            app:tabIndicatorHeight="4dp"
            app:tabTextColor="@color/white" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/nativeContainer"
            android:layout_below="@id/lin">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/nativeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
</RelativeLayout>