<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/bg_color">

                <RelativeLayout
                    android:id="@+id/ll"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize">

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:foregroundGravity="center"
                        android:padding="@dimen/_6sdp"
                        android:src="@drawable/back1" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/rubik_regular"
                        android:gravity="center"
                        android:text="Whatsapp"
                        android:textAllCaps="false"
                        android:textColor="#000"
                        android:textSize="@dimen/_13sdp" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/native_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar">

                <FrameLayout
                    android:id="@+id/adsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="visible" />
            </RelativeLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/native_add" />

            <ImageView
                android:id="@+id/im_close"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:src="@drawable/wass_ic_back"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/lnr_footer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:gravity="end"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:visibility="gone">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/imWhatsappShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/wass_ic_whatsapp"
                        android:tint="@color/black"
                        app:backgroundTint="@color/wass_white"
                        app:fabSize="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imWhatsappShare"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/rubik_regular"
                        android:text="@string/whatsapp"
                        android:textColor="@color/black"
                        android:visibility="visible" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_above="@id/r1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imShare"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/wass_ic_shar" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imShare"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/rubik_regular"
                        android:text="@string/share"
                        android:textColor="@color/black"
                        android:visibility="gone" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/r1"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imDelete"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/wass_delte" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imDelete"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/rubik_regular"
                        android:text="@string/delete"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:visibility="gone" />
                </RelativeLayout>
            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</layout>